--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "node-authentication",
+  "name": "ws-chess",
   "main": "server.js",
   "dependencies" : {
-    "express" : "~4.0.0",           
-    "ejs" : "~0.8.5",               
     "mongoose" : "~3.8.1",          
-    "passport" : "~0.1.17",         
-    "passport-local" : "~0.1.6",    
-    "connect-flash" : "~0.1.1",     
     "bcrypt-nodejs" : "latest",
-
-    "morgan": "~1.0.0",
-    "body-parser": "~1.0.0",
-    "cookie-parser": "~1.0.0",
-    "method-override": "~1.0.0",
-    "express-session": "~1.0.0",
 
     "socket.io" : "latest",
     "jsonwebtoken" : "latest",
     "socketio-jwt" : "latest",
 
-    "node-sass" : "latest"     
+    "node-sass" : "latest",
+    "node-static" : "latest",
+    "formidable" : "latest",
+
+    "morgan" : "latest"
+  },
+
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/chrisj/ws-chess.git"
   }
 }
