added chessclock, moved libs to separate directory

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "public/js/chessjs"]
-	path = public/js/chessjs
+[submodule "public/libs/chessjs"]
+	path = public/libs/chessjs
 	url = https://github.com/jhlywa/chess.js.git
