checking rough validity of json messages parsed by server

--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "node-sass" : "latest",
     "node-static" : "latest",
     "formidable" : "latest",
-
     "morgan" : "latest",
-
-    "mustache" : "latest"
+    "mustache" : "latest",
+    "jsonschema" : "latest"
   },
 
   "repository" : {
