--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "public/libs/chessjs"]
 	path = public/libs/chessjs
-	url = https://github.com/jhlywa/chess.js.git
+	url = https://github.com/chrisj/chess.js.git
