Changed visual representation of clock to my time and opp time instead of white and black time. Resizing board for smaller screens.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonschema" : "latest",
     "mocha" : "latest",
     "superagent" : "latest",
-    "socket.io-client" : "latest"
+    "socket.io-client" : "latest",
+    "async" : "latest"
   },
 
   "repository" : {
